--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
-
-      <button type="button">Замовити послугу</button>
     </header>
     <!-- Main -->
     <main>
       <!-- №1 -->
       <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- №2 -->
